# Serious-DBI-Sam

./: .gitignore  README.md  Serious-DBI-Sam.sln
.claude/: settings.local.json
OdbcBridge.Service/: OdbcBridge.Service.csproj  Program.cs  appsettings.json
OdbcBridge.Service/Configuration/: ServiceSettings.cs
OdbcBridge.Service/Data/: OdbcConnectionManager.cs  OdbcQueryExecutor.cs
OdbcBridge.Service/Services/: OdbcBridgeService.cs  Utf8LoggingExtensions.cs
duckdb-odbcbridge/: CMakeLists.txt  Makefile  README.md
duckdb-odbcbridge/proto/: odbcbridge.proto
duckdb-odbcbridge/src/: dbisam_catalog.cpp  dbisam_scanner.cpp  dbisam_storage.cpp  grpc_client.cpp  odbcbridge_extension.cpp  table_functions.cpp  type_mapping.cpp
duckdb-odbcbridge/src/include/: dbisam_catalog.hpp  dbisam_scanner.hpp  dbisam_storage.hpp  grpc_client.hpp  odbcbridge_extension.hpp  type_mapping.hpp
duckdb-odbcbridge/test/sql/: odbcbridge.test
odbcbridge/: BUILD.md  CONTENTS.md  EXTENSION.md  PROTOCOL.md  SERVICE.md
